# color-perception-bench

./: .env.example  .gitignore  BGE-VL.md  Cohere-Embed-v4.md  ColPali-v1.2.md  GEMINI.md  IMPLEMENTATION.md  Llama-Embed-Nemotron-8B.md  Makefile  NOTES.md  QUICKREF.md  Qwen3-VL-4B-Instruct.MD  Qwen3-VL-Embedding.md  README.md  SigLIP2.md  USAGE.md  models.yaml  pyproject.toml
plans/: Qwen3-VL-4B-Instruct.md
src/bge_service/: Dockerfile  app.py  requirements.txt
src/color_perception_bench/: __init__.py  benchmark.py  cache.py  cli.py  colors.py  embeddings.py  experiment.py  registry.py
src/color_perception_bench/providers/: __init__.py  base.py  local.py  openai_compatible.py
src/qwen_embedding_service/: Dockerfile  app.py  requirements.txt
src/siglip_service/: Dockerfile  app.py  download_model.py  requirements.txt
